redux. user auth

--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
     "dependencies": {
         "-": "^0.0.1",
         "@pbe/react-yandex-maps": "^1.2.2",
+        "@reduxjs/toolkit": "^2.0.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "babel-runtime": "^6.26.0",
+        "firebase": "^9.2.0",
         "gh-pages": "^5.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^9.0.4",
         "react-router-dom": "^5.3.4",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
