--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "babel-runtime": "^6.26.0",
+        "classnames": "^2.5.1",
         "firebase": "^9.2.0",
         "gh-pages": "^5.0.0",
         "node-sass": "^7.0.3",
@@ -18,6 +19,7 @@
         "react-redux": "^9.0.4",
         "react-router-dom": "^5.3.4",
         "react-scripts": "^5.0.1",
+        "uuid": "^9.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
